infrastructure/controllers/cloudflared/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
  labels:
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/component: tunnel
    goldilocks.fairwinds.com/enabled: "true"
